--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@tiptap/vue-3": "^2.0.0-beta.91",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.6.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.23.13",
     "socket.io": "^4.4.1",
     "swagger": "^0.7.5",
     "vue": "^3.2.33",
     "vue-draggable-next": "^2.1.1",
-    "vue-html2pdf": "^1.8.0",
     "vue-router": "^4.0.12",
     "vue-socket.io": "^3.0.10",
     "vue3-loading-overlay": "0.0.0",
