--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jspdf": "^2.5.1",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.23.13",
+    "remixicon": "^2.5.0",
     "socket.io": "^4.4.1",
     "swagger": "^0.7.5",
     "vue": "^3.2.33",
