공동 편집 (@tiptap/extension-collaboration, yjs, @hocuspocus/provider)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@hocuspocus/provider": "^1.0.0-alpha.36",
     "@popperjs/core": "^2.11.0",
+    "@tiptap/extension-character-count": "^2.0.0-beta.26",
+    "@tiptap/extension-collaboration": "^2.0.0-beta.33",
+    "@tiptap/extension-collaboration-cursor": "^2.0.0-beta.34",
     "@tiptap/extension-color": "^2.0.0-beta.9",
     "@tiptap/extension-document": "^2.0.0-beta.15",
     "@tiptap/extension-highlight": "^2.0.0-beta.33",
@@ -34,7 +38,8 @@
     "vue3-loading-overlay": "0.0.0",
     "vuedraggable": "^4.1.0",
     "vuemoji-picker": "^0.1.0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yjs": "^13.5.38"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.5.0",
